# ncpp

./: .gitignore  CMakeLists.txt  README.md
include/ncpp/: attribute.hpp  attributes.hpp  check.hpp  config.hpp  dataset.hpp  dimension.hpp  dimensions.hpp  dispatch.hpp  error.hpp  file.hpp  functions.hpp  iterator.hpp  ncpp.hpp  ostream.hpp  selection.hpp  types.hpp  utilities.hpp  variable.hpp  variables.hpp  variant.hpp  version.hpp
include/ncpp/detail/: dispatch.hpp  functions.hpp  utilities.hpp
include/ncpp/functions/: attribute.hpp  dataset.hpp  dimension.hpp  global.hpp  ndarray.hpp  variable.hpp  version.hpp
src/examples/: auto_link.h  simple.cpp
